--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@larksuiteoapi/node-sdk": "^1.56.1",
     "@prisma/client": "^7.3.0",
     "next": "16.1.6",
     "openai": "^6.17.0",
