--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@larksuiteoapi/node-sdk": "^1.56.1",
     "@prisma/client": "^7.3.0",
+    "jose": "^6.1.3",
     "next": "16.1.6",
     "openai": "^6.17.0",
     "prisma": "^7.3.0",
