--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "jose": "^6.1.3",
     "lucide-react": "^0.563.0",
     "next": "16.1.6",
+    "node-cron": "^4.2.1",
     "openai": "^6.17.0",
     "pg": "^8.17.2",
     "prisma": "^7.3.0",
@@ -46,6 +47,7 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
+    "@types/node-cron": "^3.0.11",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
