Enhance build process and update PrepaidExpensesPage logic
- Added a new script `build:start` in package.json to streamline the build and start process using pnpm.
- Refactored the `calculateMonths` function in PrepaidExpensesPage to simplify the return value, now returning only the number of months instead of an object.
- Removed unnecessary comments to improve code clarity.

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "build:start": "pnpm build && pnpm start",
     "lint": "eslint",
     "db:generate": "prisma generate",
     "db:push": "dotenv -e .env -- prisma db push",
